--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "better-sqlite3": "^12.5.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "dockview-react": "^4.13.1",
     "drizzle-orm": "^0.45.1",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
-    "react-resizable-panels": "^4.3.0",
     "react-router-dom": "^7.12.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
@@ -65,6 +65,7 @@
     "@vitejs/plugin-react": "^5.1.2",
     "babel-plugin-react-compiler": "^1.0.0",
     "class-variance-authority": "^0.7.1",
+    "dockview-core": "^4.13.1",
     "drizzle-kit": "^0.31.8",
     "electron": "^39.2.7",
     "electron-builder": "^26.4.0",
@@ -77,7 +78,9 @@
     "eslint-plugin-react-refresh": "^0.4.26",
     "immer": "^11.1.3",
     "react": "^19.2.3",
+    "react-arborist": "^3.4.3",
     "react-dom": "^19.2.3",
+    "react-virtualized-auto-sizer": "^2.0.2",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
     "vite": "beta"
