docs and readme and some tiny fixes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storyteller",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Storyteller is a powerful desktop application designed to replace the outdated interfaces of traditional writing software. It combines the distraction-free environment of a simple text editor with the complex world-building tools needed for full-length novels and series.",
   "main": "./out/main/index.js",
   "author": "orielhaim",
@@ -14,6 +14,7 @@
     "build:win": "pnpm run build && electron-builder --win",
     "build:mac": "pnpm run build && electron-builder --mac",
     "build:linux": "pnpm run build && electron-builder --linux",
+    "publish:win": "pnpm run build && dotenv -e .env -- electron-builder --win -p always",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push"
   },
@@ -64,7 +65,7 @@
     "@tiptap/pm": "^3.15.3",
     "@tiptap/react": "^3.15.3",
     "@tiptap/starter-kit": "^3.15.3",
-    "better-sqlite3": "^12.5.0",
+    "better-sqlite3": "^12.6.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "dockview-react": "^4.13.1",
@@ -90,11 +91,12 @@
     "@electron/rebuild": "^4.0.2",
     "@tailwindcss/vite": "^4.1.18",
     "@types/lodash.throttle": "^4.1.9",
-    "@types/node": "^25.0.3",
+    "@types/node": "^25.0.5",
     "@vitejs/plugin-react": "^5.1.2",
     "babel-plugin-react-compiler": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "dockview-core": "^4.13.1",
+    "dotenv-cli": "^11.0.0",
     "drizzle-kit": "^0.31.8",
     "electron": "^39.2.7",
     "electron-builder": "^26.4.0",
