some fixed and quality of life changes. new settings page with detailed updates

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -17,7 +17,7 @@ asarUnpack:
 win:
   executableName: Storyteller
 nsis:
-  artifactName: ${name}-${version}-setup.${ext}
+  artifactName: ${name}-${version}.${ext}
   shortcutName: ${productName}
   uninstallDisplayName: ${productName}
   createDesktopShortcut: always
