--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storyteller",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "Storyteller is a powerful desktop application designed to replace the outdated interfaces of traditional writing software. It combines the distraction-free environment of a simple text editor with the complex world-building tools needed for full-length novels and series.",
   "main": "./out/main/index.js",
   "author": "orielhaim",
@@ -69,6 +69,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "dockview-react": "^4.13.1",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "electron-log": "^5.4.3",
     "electron-updater": "^6.7.3",
@@ -76,6 +77,7 @@
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "react-hotkeys-hook": "^5.2.1",
+    "react-resizable-panels": "^4.3.3",
     "react-router-dom": "^7.12.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
@@ -91,11 +93,12 @@
     "@electron/rebuild": "^4.0.2",
     "@tailwindcss/vite": "^4.1.18",
     "@types/lodash.throttle": "^4.1.9",
-    "@types/node": "^25.0.5",
+    "@types/node": "^25.0.6",
     "@vitejs/plugin-react": "^5.1.2",
     "babel-plugin-react-compiler": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "dockview-core": "^4.13.1",
+    "dompurify": "^3.3.1",
     "dotenv-cli": "^11.0.0",
     "drizzle-kit": "^0.31.8",
     "electron": "^39.2.7",
