--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "better-sqlite3": "^12.6.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "dockview-react": "^4.13.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
@@ -76,6 +77,7 @@
     "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
+    "react-day-picker": "^9.13.0",
     "react-hotkeys-hook": "^5.2.1",
     "react-resizable-panels": "^4.3.3",
     "react-router-dom": "^7.12.0",
@@ -119,6 +121,7 @@
     "sass-embedded": "^1.97.2",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
+    "vis-timeline": "^8.5.0",
     "vite": "beta"
   },
   "pnpm": {
