--- a/package.json
+++ b/package.json
@@ -74,18 +74,19 @@
     "drizzle-orm": "^0.45.1",
     "electron-log": "^5.4.3",
     "electron-updater": "^6.7.3",
+    "electron-window-state": "^5.0.3",
     "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "react-day-picker": "^9.13.0",
     "react-hotkeys-hook": "^5.2.1",
-    "react-resizable-panels": "^4.3.3",
+    "react-resizable-panels": "^4.4.0",
     "react-router-dom": "^7.12.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
     "zod": "^4.3.5",
-    "zustand": "^5.0.9"
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@dnd-kit/core": "^6.3.1",
