--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "electron-log": "^5.4.3",
+    "electron-store": "^11.0.2",
     "electron-updater": "^6.7.3",
     "electron-window-state": "^5.0.3",
     "lodash.throttle": "^4.1.1",
@@ -96,7 +97,7 @@
     "@electron/rebuild": "^4.0.2",
     "@tailwindcss/vite": "^4.1.18",
     "@types/lodash.throttle": "^4.1.9",
-    "@types/node": "^25.0.6",
+    "@types/node": "^25.0.7",
     "@vitejs/plugin-react": "^5.1.2",
     "babel-plugin-react-compiler": "^1.0.0",
     "class-variance-authority": "^0.7.1",
@@ -122,6 +123,7 @@
     "sass-embedded": "^1.97.2",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
+    "use-debounce": "^10.1.0",
     "vis-timeline": "^8.5.0",
     "vite": "beta"
   },
