--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "next-themes": "^0.4.6",
     "react-day-picker": "^9.13.0",
     "react-hotkeys-hook": "^5.2.1",
-    "react-resizable-panels": "^4.4.0",
+    "react-resizable-panels": "^4.4.1",
     "react-router-dom": "^7.12.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
@@ -97,7 +97,7 @@
     "@electron/rebuild": "^4.0.2",
     "@tailwindcss/vite": "^4.1.18",
     "@types/lodash.throttle": "^4.1.9",
-    "@types/node": "^25.0.7",
+    "@types/node": "^25.0.8",
     "@vitejs/plugin-react": "^5.1.2",
     "babel-plugin-react-compiler": "^1.0.0",
     "class-variance-authority": "^0.7.1",
@@ -111,7 +111,7 @@
     "emblor": "^1.4.8",
     "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-compiler": "19.0.0-beta-af1b7da-20250417",
+    "eslint-plugin-react-compiler": "19.1.0-rc.2",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.26",
     "immer": "^11.1.3",
