--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storyteller",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "description": "Storyteller is a powerful desktop application designed to replace the outdated interfaces of traditional writing software. It combines the distraction-free environment of a simple text editor with the complex world-building tools needed for full-length novels and series.",
   "main": "./out/main/index.js",
   "author": "orielhaim",
@@ -76,11 +76,12 @@
     "electron-store": "^11.0.2",
     "electron-updater": "^6.7.3",
     "electron-window-state": "^5.0.3",
+    "lodash": "^4.17.21",
     "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "react-day-picker": "^9.13.0",
-    "react-hotkeys-hook": "^5.2.1",
+    "react-hotkeys-hook": "^5.2.3",
     "react-resizable-panels": "^4.4.1",
     "react-router-dom": "^7.12.0",
     "sonner": "^2.0.7",
@@ -129,6 +130,7 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@parcel/watcher",
       "better-sqlite3",
       "electron",
       "electron-winstaller",
