--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@tiptap/extension-typography": "^3.15.3",
     "@tiptap/extension-underline": "^3.15.3",
     "@tiptap/extensions": "^3.15.3",
+    "@tiptap/html": "^3.15.3",
     "@tiptap/pm": "^3.15.3",
     "@tiptap/react": "^3.15.3",
     "@tiptap/starter-kit": "^3.15.3",
@@ -83,10 +84,12 @@
     "next-themes": "^0.4.6",
     "react-day-picker": "^9.13.0",
     "react-hotkeys-hook": "^5.2.3",
+    "react-pageflip": "^2.0.3",
     "react-resizable-panels": "^4.4.1",
     "react-router-dom": "^7.12.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "tiptap-pagination-plus": "^3.0.5",
     "uuid": "^13.0.0",
     "zod": "^4.3.5",
     "zustand": "^5.0.10"
