--- a/package.json
+++ b/package.json
@@ -78,12 +78,17 @@
     "electron-store": "^11.0.2",
     "electron-updater": "^6.7.3",
     "electron-window-state": "^5.0.3",
+    "i18next": "^25.7.4",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-fs-backend": "^2.6.1",
+    "i18next-http-backend": "^3.0.2",
     "lodash": "^4.17.21",
     "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "react-day-picker": "^9.13.0",
     "react-hotkeys-hook": "^5.2.3",
+    "react-i18next": "^16.5.3",
     "react-pageflip": "^2.0.3",
     "react-resizable-panels": "^4.4.1",
     "react-router-dom": "^7.12.0",
@@ -131,7 +136,8 @@
     "tw-animate-css": "^1.4.0",
     "use-debounce": "^10.1.0",
     "vis-timeline": "^8.5.0",
-    "vite": "beta"
+    "vite": "beta",
+    "vite-plugin-i18next-loader": "^3.1.3"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
