--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@tiptap/extension-underline": "^3.16.0",
     "@tiptap/extensions": "^3.16.0",
     "@tiptap/html": "^3.16.0",
+    "@tiptap/markdown": "^3.16.0",
     "@tiptap/pm": "^3.16.0",
     "@tiptap/react": "^3.16.0",
     "@tiptap/starter-kit": "^3.16.0",
