--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storyteller",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Storyteller is a powerful desktop application designed to replace the outdated interfaces of traditional writing software. It combines the distraction-free environment of a simple text editor with the complex world-building tools needed for full-length novels and series.",
   "main": "./out/main/index.js",
   "author": "orielhaim",
@@ -84,7 +84,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-fs-backend": "^2.6.1",
     "i18next-http-backend": "^3.0.2",
-    "lodash": "^4.17.21",
+    "lodash": "^4.17.23",
     "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
@@ -109,7 +109,7 @@
     "@electron/rebuild": "^4.0.2",
     "@tailwindcss/vite": "^4.1.18",
     "@types/lodash.throttle": "^4.1.9",
-    "@types/node": "^25.0.9",
+    "@types/node": "^25.0.10",
     "@vitejs/plugin-react": "^5.1.2",
     "babel-plugin-react-compiler": "^1.0.0",
     "class-variance-authority": "^0.7.1",
@@ -132,8 +132,8 @@
     "react-arborist": "^3.4.3",
     "react-dom": "^19.2.3",
     "react-virtualized-auto-sizer": "^2.0.2",
-    "sass": "^1.97.2",
-    "sass-embedded": "^1.97.2",
+    "sass": "^1.97.3",
+    "sass-embedded": "^1.97.3",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
     "use-debounce": "^10.1.0",
@@ -144,6 +144,7 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
+      "@turbodocx/html-to-docx",
       "better-sqlite3",
       "electron",
       "electron-winstaller",
